# codemind

./: .gitignore  README.md
backend/: agent.py  auth.py  config.py  endee_client.py  github.py  ingestion.py  main.py  pyproject.toml  rag.py  requirements.txt  test_endee.py
frontend/: components.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/agent/: route.ts
frontend/app/api/ask/: route.ts
frontend/app/api/auth/: route.ts
frontend/app/api/files/: route.ts
frontend/app/api/github/connect/: route.ts
frontend/app/api/github/ingest/: route.ts
frontend/app/api/github/login/: route.ts
frontend/app/api/github/repos/: route.ts
frontend/app/api/github/status/: route.ts
frontend/app/api/ingest/: route.ts
frontend/app/api/recommend/: route.ts
frontend/app/api/search/: route.ts
frontend/app/auth/github/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AgentPanel.tsx  ChatPanel.tsx  CodeBlock.tsx  CommandPalette.tsx  EditorPanel.tsx  FileCard.tsx  FileTree.tsx  GitHubRepoModal.tsx  SearchPanel.tsx  Toast.tsx  UploadPanel.tsx
frontend/components/ui/: scroll-area.tsx
frontend/lib/: auth.tsx
